feat(opensearch): implementation ReportReaderOS and ReportWriterOS (#9557)
* feat(opensearch): implementation ReportReaderOS and ReportWriterOS

* feat(opensearch): resolve comments

---------

Co-authored-by: kovaIenko <“ruslan.kovalenko-ext@camunda.com”>